k8s/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: knowledge-graph-deployment
  labels:
    app: knowledge-graph
spec:
  selector:
    matchLabels:
      app: knowledge-graph
      role: web
  template:
    metadata:
      labels:
        app: knowledge-graph
        role: web
    spec:
      containers:
      - image: registry.openculinary.org/reciperadar/knowledge-graph
        imagePullPolicy: IfNotPresent
        name: knowledge-graph
        ports:
        - containerPort: 8000
        securityContext:
          readOnlyRootFilesystem: true
        volumeMounts:
        - mountPath: /var/tmp
          name: var-tmp
      volumes:
      - name: var-tmp
        emptyDir:
          medium: "Memory"
          sizeLimit: "128Mi"
