k8s/web-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ingredient-refinement-service
spec:
  selector:
    app: ingredient-refinement
    role: web
  ports:
    - protocol: TCP
      port: 80
