k8s/web-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: knowledge-graph-ingress
spec:
  rules:
  - host: knowledge-graph
    http:
      paths:
      - backend:
          serviceName: knowledge-graph-service
          servicePort: 80
